# stitch-sync

./: Cargo.toml  Dockerfile.linux-test  README.md  _config.yml  build.rs  justfile  mkdocs.yml
.github/workflows/: crossplatform-test.yml  docs.yml  release.yml  test-install.yml
_layouts/: default.html
docs/: commands.md  configuration.md  developer-notes.md  format-selection.md  index.md  spec.md  troubleshooting.md
docs/stylesheets/: extra.css
scripts/: bump-version  install.ps1  install.sh  preview-site.sh  release.sh
src/: cli.rs  commands.rs  file_conversion.rs  file_formats.rs  inkscape.rs  machines.rs  main.rs  usb_drive.rs  utils.rs  watch.rs
src/cli/: cli.rs  commands.rs  mod.rs  tests.rs
src/config/: defaults.rs  manager.rs  mod.rs  types.rs
src/services/: browser.rs  file_conversion.rs  inkscape.rs  mod.rs  usb_drive.rs  watch.rs
src/types/: format.rs  formats.yaml  machine.rs  machines.csv  mod.rs
src/utils/: color.rs  colors.rs  csv.rs  csv_reader.rs  files.rs  messages.rs  mod.rs  progress.rs  prompts.rs  version.rs
