[package]
name = "dst2jef"
version = "0.1.0"
edition = "2021"
authors = ["Oliver Steele <steele@osteele.com>"]
description = "Automatically convert DST embroidery files to JEF format using Inkscape and ink/stitch"
license = "MIT"
repository = "https://github.com/yourusername/dst2jef"
keywords = ["embroidery", "conversion", "inkscape", "dst", "jef"]
categories = ["command-line-utilities"]

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["precommit-hook", "run-cargo-test"] }

[dependencies]
notify = "5.0"
which = "4.4"
dirs = "5.0"
crossterm = "0.27"
clap = { version = "4.4", features = ["derive"] }
ctrlc = "3.4"
scopeguard = "1.2"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4"
strum = { version = "0.25", features = ["derive"] }
