[package]
name = "stitch-sync"
version = "0.1.0"
edition = "2021"
authors = ["Oliver Steele <steele@osteele.com>"]
description = "Automatically convert embroidery files and optionally copy them to a USB drive"
license = "MIT"
repository = "https://github.com/osteele/stitch-sync"
keywords = ["embroidery", "conversion", "inkscape", "dst", "jef"]
categories = ["command-line-utilities"]

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["precommit-hook", "run-cargo-fmt", "run-cargo-clippy", "run-cargo-test" ] }

[dependencies]
notify = "5.0"
which = "4.4"
dirs = "5.0"
crossterm = "0.27"
clap = { version = "4.4", features = ["derive"] }
ctrlc = "3.4"
scopeguard = "1.2"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4"
strum = { version = "0.25", features = ["derive"] }
csv = "1.3"
anyhow = "1.0.91"
toml = "0.8"
serde_yaml = "0.9"
strsim = "0.10.0"
regex = "1.10.2"
colored = "2.0.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tempfile = "3.8"
serde_json = "1.0"

# Linux-specific crates
[target.'cfg(target_os = "linux")'.dependencies]
libudev = "0.3"

# macOS-specific creates
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
io-kit-sys = "0.3"

# Windows-specific creates
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.48", features = [
    "Win32_Storage_FileSystem",
    "Win32_System_Ioctl",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_IO",
    "Win32_System_SystemServices",
] }
