[package]
name = "stitch-sync"
version = "0.1.2"
edition = "2021"
authors = ["Oliver Steele <steele@osteele.com>"]
description = "Automatically convert embroidery files and optionally copy them to a USB drive"
license = "MIT"
repository = "https://github.com/osteele/stitch-sync"
keywords = ["embroidery", "conversion", "inkscape", "dst", "jef"]
categories = ["command-line-utilities"]

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["precommit-hook", "run-cargo-fmt", "run-cargo-clippy", "run-cargo-test" ] }
mockall = "0.13.0"

[dependencies]
# Command-line interface and terminal
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
crossterm = "0.27"
ctrlc = "3.4"

# Serialization and data formats
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
csv = "1.3"

# Filesystem and system utilities
notify = "5.0"
which = "4.4"
dirs = "5.0"

# Error handling and utilities
anyhow = "1.0.91"
lazy_static = "1.4"
scopeguard = "1.2"

# String manipulation and matching
regex = "1.10"
strsim = "0.10"
urlencoding = "2.1"

# Type system extensions
strum = { version = "0.25", features = ["derive"] }

# Network and temporary files
reqwest = { version = "0.11", features = ["blocking", "json"] }
tempfile = "3.8"

# Build and version information
vergen = "7.5"

# Linux-specific crates
[target.'cfg(target_os = "linux")'.dependencies]
libudev = "0.3"

# macOS-specific creates
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
io-kit-sys = "0.3"

# Windows-specific creates
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.48", features = [
    "Win32_Storage_FileSystem",
    "Win32_System_Ioctl",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_IO",
    "Win32_System_SystemServices",
] }

[build-dependencies]
vergen = "7.5"
